--- a/src/styles/pages/Account/Account.scss
+++ b/src/styles/pages/Account/Account.scss
@@ -16,23 +16,228 @@
   .account-wrapper {
     .account-header {
       display: flex;
+      margin-top: 20px;
+      gap: 12px;
 
       .account-header-block {
         padding: 20px;
         background: rgba(30, 29, 47, 0.5);
         border: 1px solid rgba(255, 255, 255, 0.2);
         border-radius: 15px;
+        position: relative;
+        gap: 15px;
+        flex: 1;
+        flex-basis: 0;
+
+        .block-desc {
+          position: absolute;
+          background: #2d2b46;
+          border-radius: 6px 6px 0 6px;
+          border: 1px solid $border-color;
+          padding: 8px 10px 6px 10px;
+          font-size: 0.9rem;
+          font-weight: 600;
+          right: -1px;
+          top: -16px;
+        }
 
         &.account-block {
           display: flex;
+          align-items: center;
+          flex: 0;
 
           .account-avatar {
-            width: 96px;
+            width: 90px;
             aspect-ratio: 1/1;
             border-radius: 100%;
+            box-shadow: 0 0 20px rgba(0,0,0,.3);
+          }
+
+          .details {
+            display: grid;
+            gap: 4px;
+
+            .username {
+              font-weight: 600;
+              font-size: 1.2rem;
+            }
+
+            .level {
+              .level-values {
+                color: $primary;
+                font-size: 0.8rem;
+                font-weight: 600;
+                display: flex;
+                justify-content: space-between;
+
+                .exp-value {
+                  font-size: 0.6rem;
+                  font-weight: 500;
+                  color: #aaa;
+                  align-self: center;
+                }
+              }
+
+              .level-stripes {
+                width: 200px;
+                margin-top: 2px;
+
+                .level-stripe-dark {
+                  height: 5px;
+                  width: 100%;
+                  background: $primary;
+                  opacity: 0.2;
+                  border-radius: 5px;
+                }
+
+                .level-stripe {
+                  height: 5px;
+                  width: 40%;
+                  background-image: linear-gradient(45deg, #43ea80 25%, #31bd67 25%, #31bd67 50%, #43ea80 50%, #43ea80 75%, #31bd67 75%, #31bd67 100%);
+                  background-size: 14.14px 14.14px;
+                  border-radius: 5px;
+                  margin-top: -5px;
+                }
+              }
+            }
+
+            .balance {
+              font-size: 0.8rem;
+              display: flex;
+              flex-direction: column;
+              margin-top: 4px;
+              color: #ddd;
+
+              .balance-value {
+                font-size: 1rem;
+                font-weight: 700;
+                color: #fff;
+              }
+            }
+          }
+        }
+
+        &.best-block {
+          display: flex;
+          align-items: center;
+          gap: 25px;
+          height: 100%;
+          padding: 10px;
+          justify-content: space-between;
+          flex: 0;
+
+          .cover {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            border-radius: 14px;
+          }
+
+          .skin-img {
+            height: 111px;
+            display: flex;
+            gap: 14px;
+
+            .rarity-stripe {
+              width: 4px;
+              height: 100%;
+              border-radius: 4px;
+            }
+
+            img {
+              filter: $filter-shadow;
+            }
+          }
+
+          .details {
+            text-align: right;
+            padding-right: 10px;
+            align-self: end;
+            margin-bottom: 10px;
+
+            .weapon {
+              color: #aaa;
+              font-size: 0.7rem;
+            }
+
+            .skin {
+              font-weight: 600;
+            }
+
+            .wear {
+              font-size: 0.7rem;
+              margin-top: 2px;
+              color: #aaa;
+            }
+
+            .price {
+              font-weight: 600;
+              margin-top: 6px;
+              font-size: 0.9rem;
+            }
+
+            .date {
+              font-size: 0.6rem;
+              margin-top: 8px;
+              color: #aaa;
+            }
+          }
+        }
+
+        &.stats-block {
+          align-items: center;
+
+          .member-since {
+            font-size: 0.7rem;
+            color: #aaa;
+          }
+
+          .stats-list {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 6px;
+            margin-top: 8px;
+
+            .stat {
+              display: flex;
+              font-size: 0.9rem;
+              align-items: center;
+              justify-content: center;
+              gap: 5px;
+              background: rgba(0,0,0,.2);
+              padding: 8px 12px;
+              border-radius: 6px;
+
+              .stat-icon {
+                color: $primary;
+              }
+
+              .stat-name {
+                margin-top: 2px;
+                margin-left: 6px;
+                color: #bbb;
+                font-weight: 400;
+              }
+
+              .stat-value {
+                margin-top: 2px;
+                font-weight: 600;
+              }
+            }
           }
         }
       }
+    }
+
+    .account-inventory {
+      width: 100%;
+      height: 300px;
+      background: rgba(30, 29, 47, 0.8);
+      margin-top: 15px;
+      border-radius: 15px;
+      border: 1px solid $border-color;
     }
   }
 }
